--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://charansai:Charansai%4004@greathire-emp-project.ylbdm2o.mongodb.net/employeeDetails?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://sanket-empproject:sanket%40124@cluster0.rfjtkri.mongodb.net/employeeDetails?retryWrites=true&w=majority
